--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,15 @@
         <url-pattern>/patient-homepage</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>ChangePassword</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.ChangePasswordServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ChangePassword</servlet-name>
+        <url-pattern>/change-password</url-pattern>
+    </servlet-mapping>
+
     <!-- FILTERS -->
 
     <filter>
