--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -122,6 +122,16 @@
         <url-pattern>/protected/jsp/prescriptions/*</url-pattern>
     </filter-mapping>
 
+    <servlet>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.RestManagerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+
     <welcome-file-list>
         <welcome-file>/jsp/login.jsp</welcome-file>
     </welcome-file-list>
