--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -91,6 +91,26 @@
         <url-pattern>/list-user-prescriptions</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.RestManagerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ChangePassword</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.ChangePasswordServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ChangePassword</servlet-name>
+        <url-pattern>/change-password</url-pattern>
+    </servlet-mapping>
+
     <!-- FILTERS -->
 
     <filter>
@@ -122,15 +142,7 @@
         <url-pattern>/protected/jsp/prescriptions/*</url-pattern>
     </filter-mapping>
 
-    <servlet>
-        <servlet-name>RestManagerServlet</servlet-name>
-        <servlet-class>it.unipd.dei.webapp.servlet.RestManagerServlet</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>RestManagerServlet</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>/jsp/login.jsp</welcome-file>
