--- a/4doctors/pom.xml
+++ b/4doctors/pom.xml
@@ -156,5 +156,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+        
     </dependencies>
 </project>
