web.xml edited online with Bitbucket add servlets for prescription request, list prescription, rest, and list medicine

--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,52 @@
         <servlet-name>ChangePassword</servlet-name>
         <url-pattern>/change-password</url-pattern>
     </servlet-mapping>
+    
+        <servlet>
+        <servlet-name>ListMedicines</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.ListMedicinesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ListMedicines</servlet-name>
+        <url-pattern>/list-medicines</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PrescriptionRequest</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.PrescriptionRequestServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PrescriptionRequest</servlet-name>
+        <url-pattern>/prescription-request</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PrescriptionHome</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.PrescriptionRequestServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PrescriptionHome</servlet-name>
+        <url-pattern>/prescriptions</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PrescriptionsList</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.ListUserPrescriptionsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PrescriptionsList</servlet-name>
+        <url-pattern>/list-user-prescriptions</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.RestManagerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RestManagerServlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 
     <!-- FILTERS -->
 
