--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>CreatePatient</servlet-name>
-        <url-pattern>/create-patient</url-pattern>
+        <url-pattern>/patient</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -25,7 +25,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginUser</servlet-name>
-        <url-pattern>/login-user</url-pattern>
+        <url-pattern>/user/login</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -34,7 +34,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>LogoutUser</servlet-name>
-        <url-pattern>/logout-user</url-pattern>
+        <url-pattern>/user/logout</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -43,7 +43,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Verification</servlet-name>
-        <url-pattern>/verify</url-pattern>
+        <url-pattern>/user/verify</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -118,6 +118,24 @@
         <url-pattern>/list-user-prescriptions</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>AdminLogin</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.AdminLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminLogin</servlet-name>
+        <url-pattern>/admin/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>AdminHome</servlet-name>
+        <servlet-class>it.unipd.dei.webapp.servlet.AdminHomeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminHome</servlet-name>
+        <url-pattern>/admin/homepage</url-pattern>
+    </servlet-mapping>
+
     <!-- FILTERS -->
 
     <filter>
@@ -126,7 +144,6 @@
     </filter>
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
-        <!-- <url-pattern>/protected/*</url-pattern> -->
         <url-pattern>/jsp/login.jsp</url-pattern>
     </filter-mapping>
 
