--- a/4doctors/src/main/webapp/WEB-INF/web.xml
+++ b/4doctors/src/main/webapp/WEB-INF/web.xml
@@ -181,6 +181,7 @@
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/jsp/login.jsp</url-pattern>
+        <url-pattern>/jsp/admin-login.jsp</url-pattern>
     </filter-mapping>
 
     <filter>
